# sovereign-IQ

./: README.md  SIQ_SYSTEM_INTRODUCTION.md  TODO.md  agent演示.md  main.py  ocr_ingest_progress.json  pyproject.toml  rag_multi_format_ocr.py  更新：虚拟多角色智能体投研团队落地执行方案.docx  虚拟多角色智能体投研团队落地执行方案.docx
.claude/: settings.local.json
milvus_knowlege_setup/: .ingest_log_ic_strategist_ws.json  1#env_setup.py  2#knowledge_feeder.py  3#project_ingestor.py  4# evolution_recorder.py  5# unified_retriever.py  6# archive_manager.py  7#knowledge_ingestor_pro.py
shangjr/: shangjr_research.md
shangjr/Gemini_DeepResearch/: AI Agent 赋能金融一级市场.md  寻找金融投资AI Agent项目.md
workspace/: connect_existing_collections.py
workspace/ic_chairman_workspace/: AGENTS.md  INVESTMENT_REPORT_TEMPLATE.md  KNOWLEDGE_BASE.md  QUICK_REFERENCE.md  REPORT_GUIDE.md  SIX_DIMENSION_WEIGHTS.md  SKILLS.md  SOUL.md  TOOLS.md  WEIGHTS_RULES.md  check_all_collections.py  check_milvus.py  deep_check_knowledge.py  get_current_chat_id.py  get_group_chat_id.py  send_lark_introduction.py  setup_connection.py  verify_lark_config.py
workspace/ic_collaboration_shared_ws/: WORKFLOW.md
workspace/ic_finance_auditor_workspace/: AGENTS.md  BOARDS.md  SKILLS.md  (+5 more)
测试案例生成报告供参考/: Unitree_Robotics_R1_Chairman_Summary_20260406.md  Unitree_Robotics_R1_Finance_20260406.md  Unitree_Robotics_R1_Sector_20260406.md  Unitree_Robotics_R2_Chairman_Comprehensive_20260406.md  Unitree_Robotics_R2_Sector_20260406.md  Unitree_Robotics_R2_Strategist_20260406.md  Unitree_Robotics_R3_Blue_Legal_20260406.md  Unitree_Robotics_R3_Red_Risk_20260406.md
(+143 files in other folders)
